# offchain-gmm

./: README.md
contracts/onchain-gmm-contracts/: Anchor.toml  package-lock.json  package.json
contracts/onchain-gmm-contracts/app/: package-lock.json  package.json
contracts/onchain-gmm-contracts/app/src/: App.tsx  idl.json  idl.tsx
contracts/onchain-gmm-contracts/app/src/components/: Controls.tsx  PoolControls.tsx  notes.txt
contracts/onchain-gmm-contracts/programs/onchain-gmm-contracts/: Cargo.toml
contracts/onchain-gmm-contracts/programs/onchain-gmm-contracts/src/: big_vec.rs  lib.rs  state.rs  think
contracts/onchain-gmm-contracts/programs/onchain-gmm-contracts/src/constants/: mod.rs
contracts/onchain-gmm-contracts/programs/onchain-gmm-contracts/src/instructions/: mod.rs
contracts/onchain-gmm-contracts/programs/onchain-gmm-contracts/src/manager/: swap_manager.rs
contracts/onchain-gmm-contracts/programs/onchain-gmm-contracts/src/math/: bit_math.rs  liquidity_math.rs  mod.rs  tick_math.rs  u256_math.rs
contracts/onchain-gmm-contracts/programs/onchain-gmm-contracts/src/state/: mod.rs  tick.rs
contracts/onchain-gmm-contracts/tests/: onchain-gmm-contracts.ts  utils.ts
contracts/v3/: Anchor.toml
contracts/v3/programs/v3/: Cargo.toml
contracts/v3/programs/v3/src/: lib.rs
contracts/v3/programs/v3/src/instructions/: initialize_pool.rs
contracts/v3/programs/v3/src/math/: mod.rs  token_math.rs
contracts/v3/programs/v3/src/state/: mod.rs  pool.rs  position.rs
contracts/v3/tests/: v3.ts
