[package]
name = "onchain-gmm-contracts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onchain_gmm_contracts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
verbose = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
arrayref = "0.3.7"
bytemuck = "1.14.0"
borsh = "0.10"
num_enum = "0.5.4"
solana-program = "1.17.16"
spl-pod = "0.1.0"
spl-token-2022 = "1.0.0"
num-derive = "0.4"
num-traits = "0.2"